# discovery-node

./: .env.sample  .git-safe-push  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREATE_PR_STEPS.md  DOMAIN_FEATURE_CHANGES.md  LICENSE  OPEN_SOURCE_CHECKLIST.md  OVERVIEW.md  PR_DESCRIPTION.md  PR_OVERWAYAI.md  README.md  RELEASE_NOTES.md  SEARCH_ARCHITECTURE.md  SECURITY.md  admin_auth_documentation.md  alembic.ini  analytics_requirements.md  check_multitenant_setup.py  debug_timestamps.py  html_template.md  ingestion.yaml  ingestion.yaml.example  main.py  pyproject.toml  render.yaml  requirements.txt  run_mcp.py  run_worker_tests.py  search_books.py  simple_test.py  test_analytics_api.py  test_analytics_query.py  test_api_auth.py  test_embedding_generation.py  test_local_multitenant.sh  test_mcp_client.py  test_mcp_search.py  (+5 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
app/api/: __init__.py  web_app.py
app/core/: auth.py  config.py  dependencies.py  logging.py  urn_generator.py
app/db/: base.py
app/ingestors/: base.py  (+1 more)
docs/: CHANGES_2025-07-29.md  FEED_SERVING_IMPLEMENTATION.md  admin-api-authentication.md  database-architecture.md  embedding-generation.md  multi-tenant-setup.md  reduced-memory-deployment.md  render-yaml-updates.md  vector-storage-architecture.md  worker-ingestion-system.md
migrations/: env.py
scripts/: setup_pinecone.py  test_mcp.py  truncate_pinecone_indexes.py
tests/: conftest.py  ingestion_test_config_1.yaml  ingestion_test_config_2.yaml  test.env  test_db_connection.py  test_simple.py
(+129 files in other folders)
